--- a/LibraryManagementSystem/Views/Books/Index.cshtml
+++ b/LibraryManagementSystem/Views/Books/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Author)
+                @Html.DisplayFor(modelItem => item.Author.Id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Year)
